# nxjson

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  Makefile  README.md  nxjson.c  nxjson.h  nxjsonConfig.cmake.in  test.c
test/: CMakeLists.txt  gen_tests.hs  test.c
test/tests/: 001.expected  002.json  003.json  004.json  005.json  006.json  010.json  023.expected  026.expected  027.expected  029.expected  032.expected  033.expected  033.json  038.expected  046.json  049.json  051.json
tests/: 001.expected  001.json  005.expected  008.expected  008.json  010.expected  011.expected  020.expected  021.expected  021.json  023.json  024.expected  029.json  031.expected  034.expected  034.json  037.expected  039.expected  040.expected  041.expected  042.expected  044.json  045.json  047.expected  050.expected  050.json  053.json
